--- a/projet/403.html
+++ b/projet/403.html
@@ -1,18 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>404</title>
   </head>
   <body>
 
 
-<?php
-
-echo 'lost in space';
-
-
- ?>
+<h1>lost</h1>
 </body>
 </html>
